--- a/src/JogoDaVelha.css
+++ b/src/JogoDaVelha.css
@@ -29,9 +29,10 @@ body {
   border-radius: 4px;
   box-shadow: 3px 5px 12px rgb(0, 0, 0);
   position: absolute;
-  padding: 0 10px;
-  margin:  0 50px;
-  
+  height: 40vwin;
+  left: 30%;
+  top: 90%;
+  margin-left: -20vwin;
 }
 
 .title {
