--- a/src/JogoDaVelha.css
+++ b/src/JogoDaVelha.css
@@ -132,3 +132,21 @@ button {
   font-size: 1.2rem;
   cursor: pointer;
 }
+
+
+@media only screen and (max-width: 767px) and (orientation:portrait) {
+  body {
+    width: 100%;
+    background: red;
+    text-align: justify;
+    padding: 20%;
+
+
+  }
+  main {
+    text-align: justify;
+    font-size: 24px;
+
+  }  
+} 
+
