--- a/src/JogoDaVelha.css
+++ b/src/JogoDaVelha.css
@@ -136,17 +136,27 @@ button {
 
 @media only screen and (max-width: 767px) and (orientation:portrait) {
   body {
-    width: 100%;
-    background: red;
+    width: 100%; 
     text-align: justify;
-    padding: 20%;
-
-
+    padding: 30%;
+    display: table 
   }
   main {
-    text-align: justify;
-    font-size: 24px;
-
+    font-size: 1.5rem;
   }  
 } 
+
+@media only screen and (max-width: 767px) and (orientation:landscape) {
+  body {
+    width: 100%;
+    text-align: justify;
+    padding: 15%;
+    display: table
+   
+  }
+
+  main {
+    font-size: 1.5rem;
+  } 
+}
 
